--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "pdf-parse": "^1.1.1",
-    "pdf2json": "~2.0.1"
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
