--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,20 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.2",
     "@mui/styled-engine": "^5.13.2",
     "@mui/styled-engine-sc": "^5.12.0",
-    "@mui/x-data-grid": "^6.10.2",
-    "@mui/x-date-pickers": "^6.10.2",
     "@phosphor-icons/react": "^2.0.10",
     "@rocketseat/eslint-config": "^1.2.0",
     "axios": "^1.4.0",
-    "date-fns": "^2.30.0",
-    "dayjs": "^1.11.9",
     "phosphor-icons": "^1.4.2",
     "react": "^18.2.0",
-    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "recharts": "^2.7.2",
     "styled-components": "^5.3.11"
