--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@phosphor-icons/react": "^2.0.10",
     "@rocketseat/eslint-config": "^1.2.0",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "phosphor-icons": "^1.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
