--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "dev": "ts-node-dev --transpile-only src/server.ts"
+    "dev": "ts-node-dev --transpile-only src/server.ts",
+    "build": "swc ./src -d ./dist && node ./dist/server.js"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
@@ -11,6 +12,8 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.72",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
