--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,9 @@
     "build": "swc ./src -d ./dist",
     "start": "node ./dist/server.js"
   },
+  "engines": {
+    "node": "18"
+  },
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "cors": "^2.8.5",
