--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "dev": "ts-node-dev --transpile-only src/server.ts",
+    "dev": "ts-node-dev --transpile-only src/main/server.ts",
     "build": "swc ./src -d ./dist",
-    "start": "node ./dist/server.js"
+    "start": "node ./dist/main/server.js",
   },
   "engines": {
     "node": "18"
@@ -18,11 +18,14 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.72",
+    "@swc/jest": "^0.2.27",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
     "@types/pdf-parse": "^1.1.1",
     "eslint": "^8.45.0",
+    "jest": "^29.6.2",
+    "jest-mock-extended": "^3.0.4",
     "prisma": "^5.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
