--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,8 @@
     "dev": "ts-node-dev --transpile-only src/main/server.ts",
     "build": "swc ./src -d ./dist",
     "start": "node ./dist/main/server.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "engines": {
     "node": "18"
@@ -21,6 +23,7 @@
     "@swc/jest": "^0.2.27",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/multer": "^1.4.7",
     "@types/pdf-parse": "^1.1.1",
     "eslint": "^8.45.0",
