--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://USERNAME:PASSWORD@DB_HOST:5432/DB_NAME?schema=public"
+DATABASE_URL="postgresql://DB_USERNAME:DB_PASSWORD@DB_HOST:5432/DB_NAME?schema=public"
